--- a/Проект: Исследовательский анализ данных/Проект_2_Исследовательский анализ данных.ipynb
+++ b/Проект: Исследовательский анализ данных/Проект_2_Исследовательский анализ данных.ipynb
@@ -66,7 +66,7 @@
    "source": [
     "#Откроем файл real_estate_data.csv\n",
     "try:\n",
-    "    data = pd.read_csv('/datasets/real_estate_data.csv', sep='\\t')\n",
+    "    data = pd.read_csv('Проект: Исследовательский анализ данных/real_estate_data.csv', sep='\\t')\n",
     "except:\n",
     "    data = pd.read_csv('real_estate_data.csv', sep='\\t')"
    ]
